Working Journal Entry Viewer - Needs Data

--- a/public/styles.css
+++ b/public/styles.css
@@ -41,7 +41,7 @@ body {
 
 
 
-/*Styling for the journal enties*/
+/*Styling for the journal entries*/
 .journal-entries {
     background-color: rgb(253, 253, 253);
     height: 100px;
