--- a/public/styles.css
+++ b/public/styles.css
@@ -44,6 +44,7 @@ body {
 /*Styling for the journal entries*/
 .journal-entries {
     background-color: rgb(253, 253, 253);
+    opacity: 0.85;
     height: 100px;
     margin: 10px;
     border-radius: 5px;
@@ -52,10 +53,22 @@ body {
     transition: 200ms ease-in-out;
 }
 
+.journal-entry-headers {
+    display: block;
+}
 
 
 
 
+
+
+/*Styling for the background image*/
+body {
+    background-image: url('tiger.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
 
 
 
@@ -82,15 +95,15 @@ body {
     background-color: white;
     width: 500px;
     max-width: 80%;
-    height: 250px;
+    height: 400px;
     z-index: 10;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     border-radius: 5px;
 }
 
-.modal.active {
-    transform: translate(-50%, -50%) scale(1);
-}
+    .modal.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
 
 
 .modal-header {
@@ -101,20 +114,20 @@ body {
     border-bottom: 1px solid black;
 }
 
-.modal-header .title {
-    font-size: 2rem;
-    font-weight: bold;
-}
+    .modal-header .title {
+        font-size: 2rem;
+        font-weight: bold;
+    }
 
-.modal-header .close-button {
-    cursor: pointer;
-    background-color: black;
-    border: none;
-    outline: none;
-    border-radius: 50%;
-    color: white;
-    font-size: 1.25rem;
-}
+    .modal-header .close-button {
+        cursor: pointer;
+        background-color: black;
+        border: none;
+        outline: none;
+        border-radius: 50%;
+        color: white;
+        font-size: 1.25rem;
+    }
 
 .modal-body {
     padding: 10px;
@@ -132,17 +145,43 @@ body {
     pointer-events: none;
 }
 
-#overlay.active {
-    opacity: 1;
-    pointer-events: all;
+    #overlay.active {
+        opacity: 1;
+        pointer-events: all;
+    }
+
+
+
+/*form element styling*/
+
+form {
+    padding: 10px;
 }
 
+    form input[type=text] {
+        text-align: top;
+        width: 100%;
+        padding: 10px, 20px;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+    form input[type=submit] {
+        width: 100%;
+        background-color: #555555;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
 
-
-
-
-
-
+    form #journal-notes {
+        width: 100%;
+        height: 150px;
+    }
 
 
 /*Section for the journal entry modal viewer*/
@@ -161,9 +200,9 @@ body {
     border-radius: 5px;
 }
 
-.modal-viewer.active {
-    transform: translate(-50%, -50%) scale(1);
-}
+    .modal-viewer.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
 
 
 .modal-viewer-header {
@@ -174,21 +213,25 @@ body {
     border-bottom: 1px solid black;
 }
 
-.modal-viewer-header .title {
-    font-size: 2rem;
-    font-weight: bold;
-}
+    .modal-viewer-header .title {
+        font-size: 2rem;
+        font-weight: bold;
+    }
 
-.modal-viewer-header .close-button {
-    cursor: pointer;
-    background-color: black;
-    border: none;
-    outline: none;
-    border-radius: 50%;
-    color: white;
-    font-size: 1.25rem;
-}
+    .modal-viewer-header .close-button {
+        cursor: pointer;
+        background-color: black;
+        border: none;
+        outline: none;
+        border-radius: 50%;
+        color: white;
+        font-size: 1.25rem;
+    }
 
 .modal-viewer-body {
     padding: 10px;
+}
+
+#modal-entry {
+    transform: scale(0);
 }
