--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,11 @@
 body {
-    background-color: rgb(214, 213, 213);
+    background-color: rgb(168, 157, 157);
     margin: 0;
 }
 
-
+button:hover {
+    color: grey;
+}
 
 
 
@@ -11,27 +13,55 @@ body {
 
 
 /*styling for the navigation bar*/
-.navigation {
-    background-color: bisque;
-    float: right;
-    padding: 5px;
-    border-radius: 5px;
-    margin: 0 5px 0 5px;
-    font-size: 20px;
-
-}
-
-.heading {
-    color: rgb(216, 216, 216);
-    float: inherit;
-    font-size: 30px;
-
-}
-
 .titleBar {
+    display: flex;
     background-color: #474747;
     padding: 5px
 }
+
+    .titleBar button {
+        margin-left: auto;
+    }
+
+    .titleBar form {
+        background-color: #474747;
+        padding: 0px;
+    }
+
+    .search {
+        display: flex;
+        background-color: #474747;
+        width: 300px;
+        padding: 0px;
+        border-radius: 5px;
+        margin: 0;
+        font-size: 20px;
+        outline: none;
+    }
+
+        .search input {
+            flex-grow: 2;
+            margin-right: 2px;
+        }
+
+        .search button {
+            float: right;
+        }
+
+    .navigation {
+        background-color: bisque;
+        border-width: 0px;
+        padding: 5px;
+        border-radius: 5px;
+        margin: 0 5px 0 5px;
+        font-size: 20px;
+    }
+
+    .heading {
+        color: rgb(216, 216, 216);
+
+        font-size: 30px;
+    }
 
 
 
@@ -52,7 +82,10 @@ body {
     font-size: 24px;
     transition: 200ms ease-in-out;
 }
-
+    .journal-entries:hover {
+        opacity: 1;
+    }
+        
 .journal-entry-headers {
     display: block;
 }
@@ -194,7 +227,7 @@ form {
     background-color: white;
     width: 500px;
     max-width: 80%;
-    height: 250px;
+    height: 400px;
     z-index: 10;
     border: 1px solid black;
     border-radius: 5px;
@@ -229,8 +262,10 @@ form {
     }
 
 .modal-viewer-body {
+    display: flex;
+    flex-direction: column;
     padding: 10px;
-    height: 100%;
+    height: 85%;
 }
 
     .modal-viewer-body div {
@@ -246,4 +281,8 @@ form {
         border: none;
         border-radius: 4px;
         cursor: pointer;
+    }
+
+    #modal-viewer-text {
+        overflow-y: auto;
     }
