--- a/public/styles.css
+++ b/public/styles.css
@@ -214,6 +214,7 @@ form {
     form #journal-notes {
         width: 100%;
         height: 150px;
+        
     }
 
 
@@ -287,4 +288,13 @@ form {
 
     #modal-viewer-text {
         overflow-y: auto;
+        white-space: pre-line;
+    }
+
+    .attr-name{
+        font-weight: bold;
+    }
+
+    .attr-text {
+        font-weight: normal;
     }
